[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/Results.gd" type="Script" id=1]
[ext_resource path="res://resources/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://resources/reem.tres" type="DynamicFont" id=3]

[sub_resource type="Theme" id=2]

[node name="Results" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -112.0
margin_right = 176.0
margin_bottom = 137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 241.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
margin_left = 91.0
margin_top = 5.0
margin_right = 277.0
margin_bottom = 227.0
alignment = 1

[node name="MainLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 37.0
theme = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Level Complete!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 186.0
margin_bottom = 45.0

[node name="WingCountLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 186.0
margin_bottom = 74.0
text = "Wing Count: 3"
align = 1

[node name="SpiceLevelLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 186.0
margin_bottom = 103.0
text = "Spice: Mild"
align = 1

[node name="LevelCodeSection" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 186.0
margin_bottom = 132.0
alignment = 1

[node name="LevelCodeLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/LevelCodeSection"]
margin_left = 4.0
margin_right = 87.0
margin_bottom = 25.0
text = "Level Code: "
align = 2

[node name="LevelCode" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/LevelCodeSection"]
margin_left = 91.0
margin_right = 182.0
margin_bottom = 25.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "EARLYBIRD"
align = 1
uppercase = true

[node name="NextLevel" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 186.0
margin_bottom = 177.0
text = "Continue"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 181.0
margin_right = 186.0
margin_bottom = 222.0
alignment = 1

[node name="TryAgainButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 41.0
text = "Try Again"

[node name="LevelSelectButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 186.0
margin_bottom = 41.0
text = "Level Select"

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
